Tikiwiki Changelog
------------------
$Header: /cvsroot/tikiwiki/tiki/changelog.txt,v 1.147 2004-02-26 20:52:14 lfagundes Exp $

All developers are invited to add relevant changes in that file as they
apply them to the CVS source. You can optionnaly indicate an identifer
for the origin of the change (author, submitter, anyone involved) but
it's not so useful as the cvs log knows who adds what when.

Use the following tags to distinguish changes :
* [NEW] apply to something new added in tikiwiki
* [MOD] is an enhancement, not really new but make things come easier
* [FIX] can be used for bug fixes of any sort

Please wrap your lines to 80 characters and indent them with spaces only.
------------------

Version 1.9 
<http://tikiwiki.org/ReleaseProcess19>
* [NEW] plugin ATTACH to list attachements on a wiki page
* [MOD] Avoid sending user back to registration page on first login 


Version 1.8 -Polaris-
<http://tikiwiki.org/ReleaseProcess18>
* [FIX] fixed a bug where the lastLogin wasn't updated when using
  Pear::Auth (LDAP) and no passwords are in Tiki DB
* [FIX] fixed installer: structures upgrade
* [FIX] fixed installer: tiki_1.7to1.8.sql don't have to be run after comments
  fix
* [FIX] fixed installer: security problems where unauthorized users could
  break database settings and even could empty all tables.
* [FIX] structures creation fixed (mose)
* [FIX] fixed Forums - queued and reported messages broken (OneOfMany)
* [FIX] fixed tiki-user_bookmarks was missing a semicolon (jpf)
* [FIX] color in linkbut on tceti theme changed so its readable (dgd)
* [FIX] changed potentially dangerous defaults (link caching)
* [MOD] added option whether mail address should be checked at registration
  (may not work on windows or may not work at all, so default is off). This
  option was before hidden in the "system_os" setting.
* [FIX] fixed missing end quotes backported from 1.9 (Damian)
* [FIX] Error messages in RSS feeds are now readable in RSS readers